# polyautomate

./: .gitignore  LONGSHOT_ANALYSIS.md  NEXT_STEPS.md  README.md  notebook.ipynb  pyproject.toml
analysis/: longshot_kelly_trades.csv  risk-and-market-selection.md  universe-scan-findings.md  universe_scan_results.csv  whale-watcher-10m-vs-1h-sweep.md
examples/: arbitrage_scanner.py  basic_usage.py  granularity_sweep.py  longshot_backtest.py  market_screener.py  multi_strategy_backtest.py  tp_sl_sweep.py  universe_scan.py  whale_backtest.py
history/: fed-emergency-rate-cut-in-2025_75975189968532037196988790733987170931760654987961628737079930912099775045276_1m.csv  fed-emergency-rate-cut-in-2025_86651051340048717188016545368005905974650771288612142430184256026061526806964_1m.csv  fed-rate-hike-in-2025_60487116984468020978247225474488676749601001829886755968952521846780452448915_1m.csv  fed-rate-hike-in-2025_81104637750588840860328515305303028259865221573278091453716127842023614249200_1m.csv  khamenei-out-as-supreme-leader-of-iran-in-2025_67369669271127885658944531351746308398542291270457462650056001798232262328240_1m.csv  khamenei-out-as-supreme-leader-of-iran-in-2025_75505728818237076147318796536066812362152358606307154083407489467059230821371_1m.csv  nuclear-weapon-detonation-in-2025_18982839051472170561440795628100250435726356979078879394682487887513012777088_1m.csv  nuclear-weapon-detonation-in-2025_84933668601774689515031739413415177606677344300836824135590506442377653851020_1m.csv  (+10 more)
infra/: README.md  app.py  polyautomate_stack.py  requirements.txt
(+47 files in other folders)
